jena-shex/src/test/files/spec/negativeStructure/includeExpressionNotFound.shex
# Inclusion missing.
<http://a.example/S> {
  &<http://a.example/S1>;
  <http://a.example/p> .
}

